# wine-headless

./: CMakeLists.txt
dlls/: CMakeLists.txt
dlls/ntdll/: CMakeLists.txt
dlls/ntdll/unix/: loader.c  version.c
include/: config.h
loader/: CMakeLists.txt
nls/: CMakeLists.txt
programs/: CMakeLists.txt
programs/explorer/: CMakeLists.txt
server/: CMakeLists.txt
tools/: CMakeLists.txt
tools/widl/: CMakeLists.txt
